--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
 
       # tar
       - name: Tar dist
-        run: tar zcf build.tar.gz build public package.json pnpm-lock.yaml next.config.js
+        run: tar zcf build.tar.gz build public .env package.json pnpm-lock.yaml next.config.js
 
       # Deploy to server
       - name: Deploy to server
