--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@ant-design/pro-components": "^2.7.16",
     "ahooks": "^3.8.0",
     "antd": "^5.19.0",
     "antd-style": "^3.6.2",
