--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 使用 node:lts/iron
-      - name: use Node.js lts/iron
+      # 使用 node:lts/jod
+      - name: use Node.js lts/jod
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/iron'
+          node-version: 'lts/jod'
 
       #安装 pnpm
       - uses: pnpm/action-setup@v3
