--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,38 +18,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 9
+          run_install: false
+
       # 使用 node:lts/jod
       - name: use Node.js lts/jod
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/jod'
+          cache: 'pnpm'
 
-      #安装 pnpm
-      - uses: pnpm/action-setup@v3
-        name: Install pnpm
-        with:
-          version: 8
-          run_install: false
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      # 缓存 node modules
-      - uses: actions/cache@v4
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      # npm install
-      - name: Install Dependencies
-        run: |
-          pnpm -v
-          pnpm install
+      - name: Install dependencies
+        run: pnpm install
 
         # Create .env
       - name: Create .env
