chore: docker 部署

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,19 @@ name: Deploy Short Link System
 on:
   # 手动触发
   workflow_dispatch:
+  # 自动触发
   push:
-    branches: [ main ]
+    branches: [main]
+    paths:
+      - 'src/**'
+      - 'public/**'
+      - 'next.config.js'
+      - 'package.json'
+      - 'pnpm-lock.yaml'
+      - 'Dockerfile'
+      - 'docker-compose.yml'
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
@@ -21,7 +30,7 @@ jobs:
       - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
-          version: 9
+          version: 10
           run_install: false
 
       # 使用 node:lts/jod
@@ -61,7 +70,7 @@ jobs:
           port: ${{ secrets.REMOTE_PORT }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.ACCESS_TOKEN }}
-          source: "build.tar.gz"
+          source: 'build.tar.gz'
           target: /wwwroot/short-url
 
       # 远程Command
@@ -77,11 +86,6 @@ jobs:
             rm -rf build
             tar zxf build.tar.gz
             rm build.tar.gz
-            export NVM_DIR=~/.nvm
-            source ~/.nvm/nvm.sh
-            pnpm i
-            pm2 stop short-url
-            pm2 delete short-url
-            npm run pm2
-            pm2 save
+            docker-compose down
+            docker-compose up -d
             echo "Complete!!!"
