--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: short-url
+    container_name: short-url:latest
     ports:
       - '5600:5600'
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
     restart: always
     # 如果需要环境变量，可以添加：
     # environment:
