--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:style": "stylelint --fix \"src/**/*.css\"",
     "precommit": "lint-staged",
     "prettier": "prettier -c --write \"src/**/*\"",
-    "prepare": "husky install || true"
+    "prepare": "node -e \"if (process.env.NODE_ENV !== 'production'){process.exit(1)} \" || husky install"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "npm run lint:js",
