--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
       - 'package.json'
       - 'pnpm-lock.yaml'
       - 'Dockerfile'
-      - 'docker-compose.yml'
+      - 'docker-compose.yaml'
   pull_request:
     branches: [main]
 
@@ -58,7 +58,7 @@ jobs:
 
       # tar
       - name: Tar dist
-        run: tar zcf build.tar.gz --exclude=build/cache build public .env package.json pnpm-lock.yaml next.config.js Dockerfile docker-compose.yml
+        run: tar zcf build.tar.gz --exclude=build/cache build public .env package.json pnpm-lock.yaml next.config.js Dockerfile docker-compose.yaml
 
       # Deploy to server
       - name: Deploy to server
