--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:style": "stylelint --fix \"src/**/*.css\"",
     "precommit": "lint-staged",
     "prettier": "prettier -c --write \"src/**/*\"",
-    "prepare": "node -e \"if (process.env.NODE_ENV !== 'production'){process.exit(1)} \" || husky install"
+    "prepare": "husky install || true"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "npm run lint:js",
@@ -77,6 +77,6 @@
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.0-alpha.39"
+    "typescript-eslint": "^8.26.0"
   }
 }
