--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,5 +87,5 @@ jobs:
             tar zxf build.tar.gz
             rm build.tar.gz
             docker-compose down
-            docker-compose up -d
+            docker-compose up -d --build
             echo "Complete!!!"
