feat: 切换数据库操作至 PostgreSQL

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "next build",
     "start": "next start -p 5600",
     "publish": "next build",
-    "pm2": "pm2 start pnpm --no-pmx --name short-url -- start",
     "type-check": "tsc",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
@@ -17,7 +16,7 @@
     "lint:style": "stylelint --fix \"src/**/*.css\"",
     "precommit": "lint-staged",
     "prettier": "prettier -c --write \"src/**/*\"",
-     "postinstall": "husky || true"
+    "postinstall": "husky || true"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "npm run lint:js",
@@ -26,38 +25,41 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^5.6.1",
-    "@ant-design/nextjs-registry": "^1.0.0",
-    "@ant-design/pro-components": "^2.7.16",
-    "ahooks": "^3.8.0",
-    "antd": "^5.24.3",
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/nextjs-registry": "^1.0.2",
+    "@ant-design/pro-components": "^2.8.7",
+    "ahooks": "^3.8.2",
+    "antd": "^5.24.6",
     "antd-style": "^3.7.1",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
-    "crypto": "^1.0.1",
     "dayjs": "^1.11.11",
+    "drizzle-orm": "^0.41.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "^15.2.1",
+    "nanoid": "^5.1.5",
+    "next": "^15.2.4",
+    "pg": "^8.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.15"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.609.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/compat": "^1.1.0",
     "@eslint/js": "^9.6.0",
     "@iconify-json/lucide": "^1.1.193",
     "@next/bundle-analyzer": "^14.2.4",
+    "@tailwindcss/postcss": "^4.1.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
+    "@types/pg": "^8.11.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "co": "^4.6.0",
     "commitlint": "^19.3.0",
     "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9.6.0",
     "eslint-config-next": "^14.2.4",
     "eslint-plugin-jsx-a11y": "^6.9.0",
@@ -68,15 +70,14 @@
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
-    "rd": "^2.0.1",
     "stylelint": "^16.6.1",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-tailwindcss": "^0.0.7",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
+    "tailwindcss": "^4.1.0",
+    "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0"
   }
 }
