--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-REDIS_URL='redis_url'
-REDIS_PASSWORD='password'
+###
+ # @Author: leroy
+ # @Date: 2024-07-04 11:04:48
+ # @LastEditTime: 2025-04-03 14:54:43
+ # @Description:
+###
 ADMIN_USER='username:password'
 JWT_SECRET='secret'
+POSTGRES_URL='postgresql://username:password@host:port/database'
