chore: 更新 .env.example 和 docker-compose.yaml，调整部署工作流

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 ###
  # @Author: leroy
  # @Date: 2024-07-04 11:04:48
- # @LastEditTime: 2025-04-03 14:54:43
+ # @LastEditTime: 2025-04-03 15:15:01
  # @Description:
 ###
 ADMIN_USER='username:password'
 JWT_SECRET='secret'
-POSTGRES_URL='postgresql://username:password@host:port/database'
+DATABASE_URL='postgresql://username:password@host:port/database'
