chore: 删除 next.config.ts 文件，并更新打包配置为 next.config.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "build/types/**/*.ts",
-    "**/*.d.ts"
+    "**/*.d.ts",
+    "next.config.js"
   ],
   "exclude": ["node_modules"]
 }
