chore: 在 docker-compose.yaml 中添加网络配置 1panel-network

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - '5600:5600'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
+    networks:
+      - 1panel-network
     restart: always
     # 如果需要环境变量，可以添加：
     # environment:
