--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: short-url:latest # 定义镜像名称和标签
+    image: leroy/short-url:latest # 定义镜像名称和标签
     container_name: short-url # 容器名称
     ports:
       - '5600:5600'
